--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,16 +36,17 @@ jobs:
           workspaces: './src-tauri -> target'
 
       - name: Sync node version and setup cache
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 'lts/*'
-          cache: 'npm'
-      - name: Install pnpm
-        run: npm i pnpm -g # Set this to npm, yarn or pnpm.
-
-      - name: Install frontend dependencies
-        # If you don't have `beforeBuildCommand` configured you may want to build your frontend here too.
-        run: pnpm install # Change this to npm, yarn or pnpm.
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
