--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [macos-latest]
+        node-version: [18.x]
         # [macos-latest, ubuntu-20.04, windows-latest]
     runs-on: ${{ matrix.platform }}
 
@@ -36,7 +37,7 @@ jobs:
           workspaces: './src-tauri -> target'
 
       - name: Sync node version and setup cache
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
           version: 7
